--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="author" content="">
   <link rel="shortcut icon" href="../../assets/ico/favicon.ico">
 
-  <title>Zenvisage</title>
+  <title>Dataspread</title>
 
   <!-- Bootstrap core CSS -->
 
@@ -72,13 +72,13 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html#">zenvisage</a>
+            <a class="navbar-brand" href="index.html#">Dataspread</a>
           </div>
           <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
               <li><a href="index.html#">Home</a></li>
               <li><a href="index.html#about">About</a></li>
-              <li><a href="index.html#usecases">Use Cases</a></li>
+              <li><a href="index.html#usecases">Releases</a></li>
               <li><a href="index.html#papers">Papers</a></li>
               <li><a href="index.html#contact">Contact Us</a><li>
             </ul>
@@ -94,11 +94,11 @@
           <br> <br>
           <div class="row">
             <div class="col-md-4"> 
-               <img src="images/zenvisage.png" class="img-responsive img" style="margin-bottom: 10pt;">  
+               <img src="images/dataspread-fiverr2-cropped.png" class="img-responsive img" style="margin-bottom: 10pt;">  
            </div> 
             <div class="col-md-8"> 
               <h2>
-                <font color="red">Zenvisage is a system for effortless visual exploration of large datasets.</font>
+                <font color="#A52A2A">Dataspread combines the intuitiveness and flexibility of spreadsheets and the scalability and power of databases</font>
               </h2>
               <br> <br>
             </div>
@@ -146,30 +146,15 @@
       <a name="about"></a> 
       <div class="row">
         <div class="col-md-12">
-          <h2> <font color="blue"> Why Zenvisage? </font></h2>
+          <h2> <font color="blue"> Why DataSpread? </font></h2>
         </div>
       </div>
       <div class="row">
         <div class="col-md-12">
-          <h5> In the "big data" era, everyone has access to massive quantities of data, and are struggling to
-          make sense of, and derive value from such data. The state of the art for non-programmers 
-          is to load this data into a 
-          visualization tool, and repeatedly generate visualizations until desired ones are identified.
-          This exploration is <i> painful, tedious, and time-consuming</i>, meaning that the <i>"insight per unit
-          time"</i> is exceedingly low.
+          <h5> Blah blah
           </h5>
 
 
-          <h5>
-            What if you could <i> "skip ahead to the insights"</i>?
-          </h5>
-
-          <h5> 
-            <b>Zenvisage</b> is a visual exploration system that can automatically 
-            identify and recommend interesting
-            visualizations. The user can specify at a high level what they are looking for, and the system will
-            do the rest.
-          </h5>
       <a name="about"></a> 
       <div class="row">
         <div class="col-md-12">
@@ -271,7 +256,7 @@
       <div class="row">
         <div class="col-md-12">
           <script type="text/javascript">
-          display_papers(["zenvisage", "vizrec", "seedb", "seedb-demo", "smart-drill-down",  "smart-drill-down-demo", "seedb-paper", "intel-sample","needletail"], true, 10);
+          display_papers(["data-spread-demo", "smart-drill-down",  "smart-drill-down-demo"], true, 10);
           </script>
         </div>
       </div>
