--- a/index.html
+++ b/index.html
@@ -117,15 +117,15 @@
 	    <!-- Wrapper for slides -->
 	    <div class="carousel-inner" role="listbox">
 	      <div class="item active">
-		      <img class="img-responsive" src="images/zen-dragndrop.png">
+		      <img class="img-responsive" src="images/Screen3.png">
 	      </div>
 
 	      <div class="item">
-		      <img class="img-rounded" src="images/zen-zql.png">
+		      <img class="img-rounded" src="images/Screen2.png">
 	      </div>
 		
 	      <div class="item">
-		      <img class="img-rounded" src="images/zen-scatter.png">
+		      <img class="img-rounded" src="images/Screen1.png">
 	      </div>
 
 	   
