changes to css and index

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
   <!-- Bootstrap core CSS -->
 
 <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Signika' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Actor' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Antic+Slab' rel='stylesheet' type='text/css'>
+
 <link href="css/bootstrap.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
@@ -149,7 +153,7 @@
       <a name="about"></a> 
       <div class="row">
         <div class="col-md-12">
-          <h2> <font color="blue"> Data Analytics for the 99% </font></h2>
+          <h2> <font color="#A52A2A"> Data Analytics for the 99% </font></h2>
         </div>
       </div>
       <div class="row">
@@ -166,7 +170,7 @@
       <a name="about"></a> 
       <div class="row">
         <div class="col-md-12">
-          <h2> <font color="blue"> Key Features </font> </h2>
+          <h2> <font color="#A52A2A"> Key Features </font> </h2>
         </div>
       </div>
       <div class="row">
@@ -208,8 +212,16 @@
       <a name="usecases"></a>
       <div class="row">
         <div class="col-md-12">
-          <h2> <font color="blue">Releases</font></h2>
+          <h2> <font color="#A52A2A">Releases</font></h2>
           <h5> Our version 0.1 release is forthcoming. Stay tuned!
+          </h5>
+          <h5>
+          <ul>
+          <li>
+            Release 0.1 (July 2016, planned):  Basic scalable spreadsheets: Support for very large (1+ billion) spreadsheets, basic spreadsheet functions, cloud deployment. </li>
+          <li>Release 0.2 (September 2016, planned): Scalable, computable spreadsheets: Support for efficient formulae computation. </li>
+          <li>Release 0.3 (December 2016, planned): Scalable, computable, and collaborative spreadsheets: Support for collaboration and transactions. </li>
+        </ul>
           </h5>
 	       </div>
       </div>
@@ -218,7 +230,7 @@
       <a name="partners"></a>
       <div class="row">
         <div class="col-md-12">
-          <h2> <font color="blue">Development Partners</font></h2>
+          <h2> <font color="#A52A2A">Development Partners</font></h2>
           <h5> The development of DataSpread is being done in collaboration with the 
             analytics team at Yahoo! Champaign, along with beta-testers from the NIH-BD2K Center
             at the University of Illinois and Mayo Clinic.
@@ -266,7 +278,7 @@
       <a name="papers"></a>
       <div class="row">
         <div class="col-md-12">
-          <h2> <font color="blue"> Papers </font> </h2>
+          <h2> <font color="#A52A2A"> Papers </font> </h2>
 
         </div>
       </div>
@@ -284,7 +296,7 @@
 
       <div class="row">
         <div class="col-md-12">
-          <h2><font color="blue"> Contact Us </font></h2>
+          <h2><font color="#A52A2A"> Contact Us </font></h2>
           <h5> DataSpread is being developed by a team of undergraduate and graduate
             students headed by Prof. <a href="http://www.forwarddatalab.org/kevinchang">Kevin Chang</a>
             and Prof. <a href="http://data-people.cs.illinois.edu">Aditya Parameswaran</a>, along with  collaborators, including Prof. Karrie Karahalios. The list of contributors includes (in alphabetical order): 
