--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
       <div class="row">
         <div class="col-md-12">
           <script type="text/javascript">
-          display_papers(["data-spread-demo", "smart-drill-down",  "smart-drill-down-demo"], true, 10);
+          display_papers(["data-spread-demo"], true, 10);
           </script>
         </div>
       </div>
