--- a/index.html
+++ b/index.html
@@ -121,15 +121,15 @@
 	    <!-- Wrapper for slides -->
 	    <div class="carousel-inner" role="listbox">
 	      <div class="item active">
-		      <img class="img-responsive" src="images/Screen3.png">
+		      <img class="img-responsive" width="200px" src="images/Screen3.png">
 	      </div>
 
 	      <div class="item">
-		      <img class="img-rounded" src="images/Screen2.png">
+		      <img class="img-rounded" width="200px" src="images/Screen2.png">
 	      </div>
 		
 	      <div class="item">
-		      <img class="img-rounded" src="images/Screen1.png">
+		      <img class="img-rounded" width="200px" src="images/Screen1.png">
 	      </div>
 
 	   
