fixing the carousel bugs

--- a/index.html
+++ b/index.html
@@ -120,16 +120,32 @@
 
 	    <!-- Wrapper for slides -->
 	    <div class="carousel-inner" role="listbox">
-	      <div class="item active">
-		      <img class="img-responsive" width="200px" src="images/Screen3.png">
+        <div class="item active">
+          <img class="img-responsive" src="images/Screen4.png">
+          <div class="carousel-caption">
+           Scale to an Arbitrary Number of Rows
+           </div>
+        </div>
+
+	      <div class="item">
+		      <img class="img-responsive" src="images/Screen3.png">
+          <div class="carousel-caption">
+           Use SQL Queries within Spreadsheets 
+           </div>
 	      </div>
 
 	      <div class="item">
-		      <img class="img-rounded" width="200px" src="images/Screen2.png">
+		      <img class="img-rounded" src="images/Screen2.png">
+          <div class="carousel-caption">
+           Declare and Use Tables 
+           </div>
 	      </div>
 		
 	      <div class="item">
-		      <img class="img-rounded" width="200px" src="images/Screen1.png">
+		      <img class="img-rounded" src="images/Screen1.png">
+          <div class="carousel-caption">
+            Domain-specific Datasets
+           </div>
 	      </div>
 
 	   
