linked release notes

--- a/index.html
+++ b/index.html
@@ -229,12 +229,12 @@
       <div class="row">
         <div class="col-md-12">
           <h2> <font color="#A52A2A">Releases</font></h2>
-          <h5> Our version 0.1 release is forthcoming. Stay tuned!
+          <h5> Our version 0.1 release is out.
           </h5>
           <h5>
           <ul>
           <li>
-            Release 0.1 (July 2016, planned):  Basic scalable spreadsheets: Support for very large (1+ billion) spreadsheets, basic spreadsheet functions, cloud deployment. </li>
+            <a href="release_notes/0.1.md">Release 0.1</a> (July 2016, planned):  Basic scalable spreadsheets: Support for very large (1+ billion) spreadsheets, basic spreadsheet functions, cloud deployment. </li>
           <li>Release 0.2 (September 2016, planned): Scalable, computable spreadsheets: Support for efficient formulae computation. </li>
           <li>Release 0.3 (December 2016, planned): Scalable, computable, and collaborative spreadsheets: Support for collaboration and transactions. </li>
         </ul>
