--- a/release_notes/0.1.html
+++ b/release_notes/0.1.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <meta name="author" content="">
-  <link rel="shortcut icon" href="../../assets/ico/favicon.ico">
+  <link rel="shortcut icon" href="../../../assets/ico/favicon.ico">
 
   <title>Dataspread</title>
 
@@ -56,10 +56,10 @@
 
   <script type="text/javascript" src="http://data-people.cs.illinois.edu/papers.json"></script>    
 
-  <script type="text/javascript" src="display_papers.js"></script>
+  <script type="text/javascript" src="../display_papers.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script> 
 
-  <script src="js/bootstrap.js"></script>
+  <script src="../js/bootstrap.js"></script>
 
   
 
@@ -290,7 +290,7 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
+    <script src="../../../dist/js/bootstrap.min.js"></script>
     <script src="offcanvas.js"></script>
   </body>
   </html>
