--- a/release_notes/0.1.html
+++ b/release_notes/0.1.html
@@ -20,11 +20,11 @@
 <link href='https://fonts.googleapis.com/css?family=Actor' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Antic+Slab' rel='stylesheet' type='text/css'>
 
-<link href="css/bootstrap.css" rel="stylesheet">
+<link href="../css/bootstrap.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/offcanvas.css" rel="stylesheet">
-  <link href="css/ap.css" rel="stylesheet">
+  <link href="../css/offcanvas.css" rel="stylesheet">
+  <link href="../css/ap.css" rel="stylesheet">
   <style> 
   .carousel{
 	    background: #2f4350;
