--- a/release_notes/0.1.html
+++ b/release_notes/0.1.html
@@ -56,7 +56,7 @@
 
   <script type="text/javascript" src="http://data-people.cs.illinois.edu/papers.json"></script>    
 
-  <script type="text/javascript" src="../../display_papers.js"></script>
+  <script type="text/javascript" src="http://dataspread.github.io/display_papers.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script> 
 
   <script src="../js/bootstrap.js"></script>
