--- a/release_notes/0.1.html
+++ b/release_notes/0.1.html
@@ -98,7 +98,7 @@
           <br> <br>
           <div class="row">
             <div class="col-md-4"> 
-               <img src="images/dataspread-fiverr2-cropped.png" class="img-responsive img" style="margin-bottom: 10pt;">  
+               <img src="../images/dataspread-fiverr2-cropped.png" class="img-responsive img" style="margin-bottom: 10pt;">  
            </div> 
             <div class="col-md-8"> 
               <h2>
