--- a/release_notes/0.1.html
+++ b/release_notes/0.1.html
@@ -102,7 +102,7 @@
            </div> 
             <div class="col-md-8"> 
               <h2>
-                <font color="#A52A2A">Dataspread combines the intuitiveness and flexibility of spreadsheets and the scalability and power of databases</font>
+                <font color="#A52A2A">Release Notes 0.1</font>
               </h2>
               <br> <br>
             </div>
@@ -110,7 +110,6 @@
       <!--</div>-->
       </div>
 
-<br/>
 <br/>
 
       <div class="row">
