--- a/release_notes/0.1.html
+++ b/release_notes/0.1.html
@@ -156,7 +156,7 @@
       <div class="row">
         <div class="col-md-12">
           <h2> <font color="#A52A2A">Installation</font></h2>
-          <h5> Required Software
+          <h5> <b>Required Software</b>
           </h5>
           <h5>
           <ul>
@@ -165,7 +165,7 @@
           <li>PostgreSQL 9.5</li>
         </ul>
           </h5>
-          <h5>Setup</h5>
+	<h5><b>Setup</b></h5>
        </div>
       </div>
 
@@ -209,7 +209,20 @@
          </div>
       </div>
 
-		    <hr> 
+	<div class="row">
+        <div class="col-md-12">
+          <h2> <font color="#A52A2A">Current Issues</font></h2>
+          <h5>
+          <ul>
+		<li><a href="">1:sheet scrolling has a delay in display</a></li>
+          <li><a href="">2: sorting not working</a></li>
+          <li><a href="">3: copy sheet not working</a></li>
+        </ul>
+          </h5>
+       </div>
+      </div>
+		   
+	<hr> 
 
         
 
