--- a/release_notes/0.1.html
+++ b/release_notes/0.1.html
@@ -120,11 +120,13 @@
       <div class="row">
         <div class="col-md-12">
           <h5> 
-            DataSpread is a data exploration tool that holistically unifies databases and spreadsheets with a goal to work with massive spreadsheets.
-          </h5>
-
-          <h5>
-            DataSpread retains all the advantages of spreadsheets, including ease of use, ad-hoc analysis, and visualization capabilities, and a schema-free nature, while also adding the scalability and collaboration abilities of traditional relational databases.
+		<ul>
+			<li>DataSpread is a data exploration tool that holistically unifies databases and spreadsheets with a goal to work with massive spreadsheets.
+			</li>
+			<li>DataSpread retains all the advantages of spreadsheets, including ease of use, ad-hoc analysis, and visualization capabilities, and a schema-free nature, while also adding the scalability and collaboration abilities of traditional relational databases.
+			</li>
+		  </ul>
+            
           </h5>
 
 
