--- a/release_notes/0.1.html
+++ b/release_notes/0.1.html
@@ -80,11 +80,11 @@
           </div>
           <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-              <li><a href="index.html#">Home</a></li>
-              <li><a href="index.html#about">About</a></li>
-              <li><a href="index.html#usecases">Releases</a></li>
-              <li><a href="index.html#papers">Papers</a></li>
-              <li><a href="index.html#contact">Contact Us</a><li>
+              <li><a href="../index.html#">Home</a></li>
+              <li><a href="../index.html#about">About</a></li>
+              <li><a href="../index.html#usecases">Releases</a></li>
+              <li><a href="../index.html#papers">Papers</a></li>
+              <li><a href="../index.html#contact">Contact Us</a><li>
             </ul>
       </div>
     </div>
