--- a/release_notes/0.1.html
+++ b/release_notes/0.1.html
@@ -76,7 +76,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html#">Dataspread</a>
+            <a class="navbar-brand" href="../index.html#">Dataspread</a>
           </div>
           <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
@@ -102,8 +102,10 @@
            </div> 
             <div class="col-md-8"> 
               <h2>
-                <font color="#A52A2A" style="margin-top: 10pt;">Release Notes 0.1</font>
+                <font color="#A52A2A">Release Notes 0.1</font>
               </h2>
+		    <h3><font>Released on Dec 14, 2016.</font>
+		    </h3>
               <br> <br>
             </div>
           </div>
