--- a/release_notes/0.1.html
+++ b/release_notes/0.1.html
@@ -101,11 +101,11 @@
                <img src="../images/dataspread-fiverr2-cropped.png" class="img-responsive img" style="margin-bottom: 10pt;">  
            </div> 
             <div class="col-md-8"> 
-              <h2>
+              <h1>
                 <font color="#A52A2A">Release Notes 0.1</font>
-              </h2>
-		    <h3><font>Released on Dec 14, 2016.</font>
-		    </h3>
+              </h1>
+		    <h4 style="margin-top:-10pt;"><font>Released on Dec 14, 2016.</font>
+		    </h4>
               <br> <br>
             </div>
           </div>
