--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <meta name="author" content="">
-  <link rel="shortcut icon" href="../../assets/ico/favicon.ico">
+  <link rel="shortcut icon" href="ico/favicon.ico">
 
   <title>Dataspread</title>
 
@@ -234,7 +234,7 @@
           <h5>
           <ul>
           <li>
-            <a href="release_notes/0.1.html">Release 0.1</a> (July 2016, planned):  Basic scalable spreadsheets: Support for very large (1+ billion) spreadsheets, basic spreadsheet functions, cloud deployment. </li>
+            <a href="https://github.com/dataspread/releases/releases/tag/v0.1">Release 0.1</a> (July 2016, planned):  Basic scalable spreadsheets: Support for very large (1+ billion) spreadsheets, basic spreadsheet functions, cloud deployment. </li>
           <li>Release 0.2 (September 2016, planned): Scalable, computable spreadsheets: Support for efficient formulae computation. </li>
           <li>Release 0.3 (December 2016, planned): Scalable, computable, and collaborative spreadsheets: Support for collaboration and transactions. </li>
         </ul>
