--- a/index.html
+++ b/index.html
@@ -234,9 +234,9 @@
           <h5>
           <ul>
           <li>
-            <a href="https://github.com/dataspread/releases/releases/tag/v0.1">Release 0.1</a> (July 2016, planned):  Basic scalable spreadsheets: Support for very large (1+ billion) spreadsheets, basic spreadsheet functions, cloud deployment. </li>
-          <li>Release 0.2 (September 2016, planned): Scalable, computable spreadsheets: Support for efficient formulae computation. </li>
-          <li>Release 0.3 (December 2016, planned): Scalable, computable, and collaborative spreadsheets: Support for collaboration and transactions. </li>
+            <a href="https://github.com/dataspread/releases/releases/tag/v0.1">Release 0.1</a> (December 2016, released):  Basic scalable spreadsheets: Support for very large (1+ billion) spreadsheets, basic spreadsheet functions, cloud deployment. </li>
+          <li>Release 0.2 (April 2017, planned): Scalable, computable spreadsheets: Support for efficient formulae computation. </li>
+          <li>Release 0.3 (July 2017, planned): Scalable, computable, and collaborative spreadsheets: Support for collaboration and transactions. </li>
         </ul>
           </h5>
 	       </div>
