--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
           <h5> DataSpread is being developed by a team of undergraduate and graduate
             students headed by Prof. <a href="http://www.forwarddatalab.org/kevinchang">Kevin Chang</a>
             and Prof. <a href="http://data-people.cs.illinois.edu">Aditya Parameswaran</a>, along with  collaborators, including Prof. Karrie Karahalios. The list of contributors includes (in alphabetical order): 
-          Mangesh Bendre, Neelan Coleman, Himel Dev, Bofan Sun, Vipul Venkataraman, Yiming Wang, Yining Wang, Ding Zhang, Xinyan Zhou. 
+          Mangesh Bendre, Neelan Coleman, Himel Dev, Yuyang Liu, Bofan Sun, Vipul Venkataraman, Yiming Wang, Yining Wang, Ding Zhang, Xinyan Zhou, Shichu Zhu. 
         </h5>
 
         <h5>
