--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
       <div class="row">
         <div class="col-md-12">
           <script type="text/javascript">
-          display_papers(["dataspread-reddit", "dataspread", "data-spread-demo"], true, 10);
+          display_papers(["dataspread-reddit", "dataspread", "data-spread-demo","dataspread-demo2"], true, 10);
           </script>
         </div>
       </div>
