--- a/index.html
+++ b/index.html
@@ -214,6 +214,11 @@
               DataSpread prioritizes computation for what the user is currently seeing, as opposed
               to what they are not.
             </li>
+	    <li> <b> Navigation Panel. </b>
+              Enables the users to explore large tabular data via panning and zooming operations 
+	      and get additional details about the data on demand via aggregation
+	      operations while maintaining the history and context of navigation.
+            </li>
 	         </ul>
           </h5>
           <h5>
@@ -229,7 +234,7 @@
       <div class="row">
         <div class="col-md-12">
           <h2> <font color="#A52A2A">Releases</font></h2>
-		<h5> Our version 0.3 release is out. <a href="http://kite.cs.illinois.edu:8080/">Check it now!</a>
+		<h5> Our version 0.5 release is out. <a href="http://kite.cs.illinois.edu:8080/">Check it now!</a>
           </h5>
           <h5>
           <ul>
@@ -237,7 +242,10 @@
             <a href="https://github.com/dataspread/dataspread-web/releases/tag/v0.1.1">Release 0.1</a> (December 2016, released):  Basic scalable spreadsheets: Support for very large (1+ billion) spreadsheets, basic spreadsheet functions, cloud deployment. </li>
           <li>
             <a href="https://github.com/dataspread/dataspread-web/releases/tag/v0.3">Release 0.3</a> (August 2017, released):  Table functionality: Create and Link tables, add/delete of rows/columns.</li>
-        </ul>
+          <li>
+            <a href="https://github.com/dataspread/dataspread-web/releases/tag/v0.5">Release 0.5</a> (May 2019, released):  Navigation panel, relational operators and asynchronous computation.</li>
+        
+         </ul>
           </h5>
 	       </div>
       </div>
