sigmod paper added. release version updated

--- a/index.html
+++ b/index.html
@@ -239,12 +239,11 @@
           <h5>
           <ul>
           <li>
-            <a href="https://github.com/dataspread/dataspread-web/releases/tag/v0.1.1">Release 0.1</a> (December 2016, released):  Basic scalable spreadsheets: Support for very large (1+ billion) spreadsheets, basic spreadsheet functions, cloud deployment. </li>
+            <a href="https://github.com/dataspread/dataspread-web/releases/tag/v0.5">Release 0.5</a> (May 2019, released):  Navigation panel, relational operators and asynchronous computation.</li>
           <li>
             <a href="https://github.com/dataspread/dataspread-web/releases/tag/v0.3">Release 0.3</a> (August 2017, released):  Table functionality: Create and Link tables, add/delete of rows/columns.</li>
           <li>
-            <a href="https://github.com/dataspread/dataspread-web/releases/tag/v0.5">Release 0.5</a> (May 2019, released):  Navigation panel, relational operators and asynchronous computation.</li>
-        
+            <a href="https://github.com/dataspread/dataspread-web/releases/tag/v0.1.1">Release 0.1</a> (December 2016, released):  Basic scalable spreadsheets: Support for very large (1+ billion) spreadsheets, basic spreadsheet functions, cloud deployment. </li>
          </ul>
           </h5>
 	       </div>
@@ -311,7 +310,7 @@
       <div class="row">
         <div class="col-md-12">
           <script type="text/javascript">
-          display_papers(["dataspread-reddit", "dataspread", "data-spread-demo","dataspread-demo2"], true, 10);
+          display_papers(["dataspread-reddit", "dataspread", "data-spread-demo","dataspread-demo2","dataspread-formula"], true, 10);
           </script>
         </div>
       </div>
