--- a/index.html
+++ b/index.html
@@ -109,16 +109,18 @@
           </div>
       <!--</div>-->
       </div>
+	  
 	<div class="row">
-	  <div id="myCarousel" class="carousel slide" data-ride="carousel">
-	    <!-- Indicators -->
+		
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/iZsboe3x680" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	 <!-- <div id="myCarousel" class="carousel slide" data-ride="carousel">
+	    
 	    <ol class="carousel-indicators">
 	      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
 	      <li data-target="#myCarousel" data-slide-to="1"></li>
 	      <li data-target="#myCarousel" data-slide-to="2"></li>	
 	    </ol>
 
-	    <!-- Wrapper for slides -->
 	    <div class="carousel-inner" role="listbox">
         <div class="item active">
           <img class="img-responsive" src="images/Screen4.png">
@@ -151,7 +153,7 @@
 	   
 	    </div>
 
-	    <!-- Left and right controls -->
+
 	    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
 	      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
 	      <span class="sr-only">Previous</span>
@@ -160,7 +162,7 @@
 	      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
 	      <span class="sr-only">Next</span>
 	    </a>
-	  </div>
+	  </div>-->
 	</div>
 
 <br/>
