--- a/index.html
+++ b/index.html
@@ -111,9 +111,10 @@
       </div>
 	  
 	<div class="row">
-		
+		<div class="col-md-2 col-md-offset-5">
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/iZsboe3x680" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	 <!-- <div id="myCarousel" class="carousel slide" data-ride="carousel">
+	 </div>
+		<!-- <div id="myCarousel" class="carousel slide" data-ride="carousel">
 	    
 	    <ol class="carousel-indicators">
 	      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
