--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       </div>
 	  
 	<div class="row">
-		<div class="col-md-2 col-md-offset-5">
+		<div class="span6" style="float: none; margin: 0 auto;">
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/iZsboe3x680" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	 </div>
 		<!-- <div id="myCarousel" class="carousel slide" data-ride="carousel">
