centering video attempt 3

--- a/index.html
+++ b/index.html
@@ -109,11 +109,13 @@
           </div>
       <!--</div>-->
       </div>
-	  
-	<div class="row">
-		<div class="span6" style="float: none; margin: 0 auto;">
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/iZsboe3x680" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	
+	    <div class="i-am-centered">
+      		<div class="row">
+		    <iframe width="560" height="315" src="https://www.youtube.com/embed/iZsboe3x680" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	 </div>
+    	   </div>  
+	
 		<!-- <div id="myCarousel" class="carousel slide" data-ride="carousel">
 	    
 	    <ol class="carousel-indicators">
@@ -164,7 +166,7 @@
 	      <span class="sr-only">Next</span>
 	    </a>
 	  </div>-->
-	</div>
+	
 
 <br/>
 <br/>
