--- a/index.html
+++ b/index.html
@@ -110,11 +110,10 @@
       <!--</div>-->
       </div>
 	
-	    <div class="i-am-centered">
+	    
       		<div class="row">
-		    <iframe width="560" height="315" src="https://www.youtube.com/embed/iZsboe3x680" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	 </div>
-    	   </div>  
+		    <iframe width="560" height="315" align="middle" src="https://www.youtube.com/embed/iZsboe3x680" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	
 	
 		<!-- <div id="myCarousel" class="carousel slide" data-ride="carousel">
 	    
@@ -166,7 +165,7 @@
 	      <span class="sr-only">Next</span>
 	    </a>
 	  </div>-->
-	
+	</div>
 
 <br/>
 <br/>
