changes to papers and contact information

--- a/index.html
+++ b/index.html
@@ -237,8 +237,6 @@
       <div class="row">
         <div class="col-md-12">
           <h2> <font color="#A52A2A">Releases</font></h2>
-		<h5> Our version 0.5 release is out. <a href="http://kite.cs.illinois.edu:8080/">Check it now!</a>
-          </h5>
           <h5>
           <ul>
           <li>
@@ -252,7 +250,7 @@
 	       </div>
       </div>
 
-
+<!--
       <a name="partners"></a>
       <div class="row">
         <div class="col-md-12">
@@ -263,7 +261,7 @@
           </h5>
          </div>
       </div>
-
+-->
 
       
 <!--
@@ -313,7 +311,7 @@
       <div class="row">
         <div class="col-md-12">
           <script type="text/javascript">
-          display_papers(["dataspread-reddit", "dataspread", "data-spread-demo","dataspread-demo2","dataspread-formula"], true, 10);
+          display_papers(["dataspread-nav", "dataspread-bench", "dataspread-reddit", "dataspread", "data-spread-demo","dataspread-demo2","dataspread-formula"], true, 10);
           </script>
         </div>
       </div>
@@ -323,14 +321,20 @@
       <div class="row">
         <div class="col-md-12">
           <h2><font color="#A52A2A"> Contact Us </font></h2>
-          <h5> DataSpread is being developed by a team of undergraduate and graduate
-            students headed by Prof. <a href="http://www.forwarddatalab.org/kevinchang">Kevin Chang</a>, Prof. <a href="http://social.cs.uiuc.edu/people/kkarahal.html">Karrie Karahalios</a>
-            and Prof. <a href="http://data-people.cs.illinois.edu">Aditya Parameswaran</a>. The list of contributors includes (in alphabetical order): 
-          Mangesh Bendre, Neelan Coleman, Himel Dev, Yuyang Liu, Yu Lu, <a href="http://srahman7.web.engr.illinois.edu">Sajjadur Rahman</a>, Bofan Sun, Vipul Venkataraman, Yiming Wang, Yining Wang, Tana Wattanawaroon, Ding Zhang, Xinyan Zhou, Shichu Zhu. 
+          <h5>
+            The current version of DataSpread (what we're calling DataSpread 2.0) is being developed by a team of undergraduate and graduate
+            students headed by Prof. <a href="http://social.cs.uiuc.edu/people/kkarahal.html">Karrie Karahalios</a> 
+            and Prof. <a href="http://data-people.cs.illinois.edu">Aditya Parameswaran</a> at the University of Illinois and at UC Berkeley. 
+            The list of contributors includes (in alphabetical order): 
+          Mangesh Bendre,  Ti-Chung Cheng, Kelly Mack, Joon Sung Park, <a href="http://srahman7.web.engr.illinois.edu">Sajjadur Rahman</a>, Tana Wattanawaroon, and Pingjing Yang. 
+          </h5>
+
+          <h5>
+          Past contributors for previous versions include Kevin Chang, Neelan Coleman, Himel Dev, Yuyang Liu, Yu Lu, Bofan Sun, Vipul Venkataraman, Yiming Wang, Yining Wang, Ding Zhang, Xinyan Zhou, and Shichu Zhu. 
         </h5>
 
         <h5>
-          Please reach out to the lead PhD student, Mangesh Bendre (bendre1@illinois.edu) if you'd like to either contribute, or be
+          Please reach out to Aditya Parameswaran (adityagp@berkeley.edu) if you'd like to either contribute, or be
           a beta tester of DataSpread! </h5>
         </div>
       </div>
