added richard lin to list of contributors

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
             students headed by Prof. <a href="http://social.cs.uiuc.edu/people/kkarahal.html">Karrie Karahalios</a> 
             and Prof. <a href="http://data-people.cs.illinois.edu">Aditya Parameswaran</a> at the University of Illinois and at UC Berkeley. 
             The list of contributors includes (in alphabetical order): 
-          Mangesh Bendre,  Ti-Chung Cheng, Kelly Mack, Joon Sung Park, <a href="http://srahman7.web.engr.illinois.edu">Sajjadur Rahman</a>, Tana Wattanawaroon, and Pingjing Yang. 
+          Mangesh Bendre,  Ti-Chung Cheng, Richard Lin, Kelly Mack, Joon Sung Park, <a href="http://srahman7.web.engr.illinois.edu">Sajjadur Rahman</a>, Tana Wattanawaroon, and Pingjing Yang. 
           </h5>
 
           <h5>
